--- a/src/components/mainPage.css
+++ b/src/components/mainPage.css
@@ -3,12 +3,10 @@
     padding: 0;
     background-color: #ecc1d0;
     text-align: center;
-    /*font-family: "Yomogi", cursive;*/
     font-style: normal;
     background-image: url("img/104-60-5.png");
 }
 
-/*@import url('https://fonts.googleapis.com/css2?family=Marck+Script&family=Yomogi&display=swap');*/
 
 @font-face {
     font-family: "Yomogi", cursive;
@@ -29,40 +27,18 @@
     font-style: normal;
 }
 
-@font-face {
-    font-family: "Shantell Sans", cursive;
-    font-weight: 300;
-    font-style: italic;
-    font-variation-settings:
-            "BNCE" 0,
-            "INFM" 0,
-            "SPAC" 0;
-}
 
 @font-face {
-    font-family: "Cormorant Infant", serif;
-    font-weight: 300;
+    font-family: "Finlandica", sans-serif;
     font-style: normal;
 }
 
 
 @font-face {
     font-family: "Caveat", cursive;
-    /*font-optical-sizing: auto;*/
     font-weight: 400;
     font-style: normal;
 }
-
-/*.marck-script-regular {*/
-/*    font-family: "Marck Script", cursive;*/
-/*    font-weight: 400;*/
-/*    font-style: normal;*/
-/*}*/
-/*.lol{*/
-/*    color: #e25442;*/
-/*    font-weight: bold;*/
-
-/*}*/
 
 .top{
     margin-top: 30px;
@@ -87,32 +63,6 @@
     text-align: left;
 }
 
-.link_top span:hover{
-    /*margin-bottom: 3px;*/
-    /*text-decoration: underline 1px solid black;*/
-    /*display: block;*/
-    /*position: absolute;*/
-    /*left: 0; !*изменить на right:0;, чтобы изменить направление подчёркивания *!*/
-    /*width: 0;!*задаём длинну линии до наведения курсора*!*/
-    /*height: 2px; !*задаём ширину линии*!*/
-    /*background-color: #00a650; !*задаём цвет линии*!*/
-    /*content: "";*/
-    /*transition: width 0.3s ease-out;*/
-
-}
-
-
-.link_top span:hover {
-    /*content: '';*/
-    /*bottom: 0;*/
-    /*right: 0;*/
-    /*position: absolute;*/
-    /*width: 0;*/
-    /*height: 2px;*/
-    /*background-color: #ADD8E6;*/
-    /*!*transition: 0.2s;*!*/
-}
-
 
 .link{
     color: #e25442;
@@ -121,22 +71,12 @@
     font-weight: bold;
     margin-right: 15px;
     font-family: "Yomogi", cursive;
+    letter-spacing: -3px;
+
 }
 
-/*@media screen {*/
-/*    .top{*/
-/*        margin-top: 30px;*/
-/*        margin-left: 40px;*/
-/*        color: #e25442;*/
-/*    }*/
-/*}*/
 
 .img_1{
-    /*height: 650px;*/
-    /*width: 470px;*/
-    /*height: 530px;*/
-    /*width: 350px;*/
-
     height: 550px;
     width: 370px;
     float: right;
@@ -178,39 +118,19 @@
     }
 }
 
-
-/*@media (max-width: 992px) {*/
-/*    .text_1 {*/
-/*       margin-top: 50px;*/
-/*    }*/
-/*}*/
-
-/*@media (max-width: 992px) {*/
-/* .img_1{*/
-/*     width: 270px;*/
-/*     height: 150px;*/
-/* }*/
-/*}*/
-/*443*/
-/*439*/
 .text_1{
     width: 500px;
     color: #e25442;
-    /*float: contour;*/
     padding-right: 35px;
     position: center;
     margin-top: 40px;
     float: top;
     text-align: center;
-  /*font-weight: light;*/
-    /*letter-spacing: unset;*/
-    /*position: absolute;*/
     font-family: "Caveat", cursive;
 }
 
 .text_1 h1{
     font-size: xxx-large;
-    /*font-family: "Yomogi", cursive;*/
 }
 .text_1 h2{
     margin-top: 30px;
@@ -240,41 +160,13 @@
     .center {
         margin-top: 60px;
     }
-
-    /*.btn_1{*/
-    /*    margin-top: 80px;*/
-    /*    width: 100px*/
-    /*    !*height: 209px;*!*/
-
-    /*}*/
 }
-
-
-
-/*@media (max-width: 992px){*/
-
-/*    .btn_1{*/
-/*        width: 150px;*/
-/*        height:  25px;*/
-/*        font-weight: bold;*/
-/*        font-size: large;*/
-/*    }*/
-/*}*/
-
-/*@media (max-width: 992px) {*/
-/*    .btn_1 {*/
-/*        width: 200px; !* Новая ширина *!*/
-/*        height: 40px; !* Новая высота *!*/
-/*        font-size: large; !* Новый размер шрифта *!*/
-/*    }*/
-/*}*/
 
 @media (max-width: 992px) {
     .btn_1 {
         margin-top: 80px;
-        max-width: 300px; /* Максимальная ширина не более 300px */
-        height: auto; /* Автоматическая высота (подстраивается под контент) */
-
+        max-width: 300px;
+        height: auto;
     }
 }
 
@@ -288,21 +180,11 @@
     border: 0;
     border-radius: 25px;
     font-family: "Yomogi", cursive;
+    letter-spacing: -5px;
     font-weight: bold;
     font-size: x-large;
     flex-wrap: wrap;
 }
-
-/*.Shape {*/
-/*    background-color: rgb(226, 84, 66);*/
-/*    position: absolute;*/
-/*    left: 829px;*/
-/*    top: 563px;*/
-/*    width: 200px;*/
-/*    height: 201px;*/
-/*    z-index: 7;*/
-/*}*/
-
 
 .star_1{
     height: 30px;
@@ -354,9 +236,6 @@ position: absolute;
     width: 30px;
     background-color: #f2e5f8;
     margin-right: 10px;
-    /*margin-right: 300px;*/
-    /*margin-bottom: 20px;*/
-    /*position: absolute;*/
 }
 
 .point_1{
@@ -371,15 +250,12 @@ position: absolute;
     height: 10px;
     width: 10px;
     position: absolute;
-/*margin-right: 100px;*/
 }
 
 
 
 .modal_1 h2{
     background-color: #f2e5f8;
-
-    /*color: #ecc1d0;*/
 }
 
 .text_modal_2{
@@ -393,5 +269,5 @@ text-align: left;
 }
 
 .text_modal_3 {
-    padding-top: 15px;
+    text-align: left;
 }
