--- a/src/components/mainPage.css
+++ b/src/components/mainPage.css
@@ -116,6 +116,10 @@
         width: 100%;
         height: 250px;
     }
+
+    .top {
+        margin-left: 40px;
+    }
 }
 
 .text_1{
@@ -155,6 +159,7 @@
 
     .link_top{
         font-size: small;
+        margin-left: 35px;
     }
 
     .center {
